# QCchem

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
artifacts/: artifact_index.json
benchmarks/: README.md  benchmark_suite_v1.yaml  cavity_qed_suite_v1.yaml  compression_suite_v1.yaml  field_model_qft_cutoff_grid_convergence_v1.yaml  field_model_qft_dynamics_resource_v1.yaml  field_model_qft_hardware_micro_real_v1.yaml  field_model_qft_hardware_micro_v1.yaml  field_model_qft_local_campaign_v1.yaml  field_model_qft_smoke_v2.yaml  hardware_calibration_suite_v1.yaml  low_rank_suite_v1.yaml  lr_ace_flagship_suite_v1.yaml  mini_suite.yaml  pbc_qmmm_suite_v1.yaml  qmmm_environment_embedding_suite_v1.yaml
configs/: h2.yaml  h2_cudaq_mklq_cpu.yaml  h2_cudaq_mklq_metal_smoke.yaml  h2_cudaq_mklq_sample.yaml  h2_cudaq_sample.yaml  h2_cudaq_statevector.yaml  h2_environment_embedding.yaml  h2_environment_embedding_z2_auto.yaml  h2_environment_embedding_z2_enabled.yaml  h2_exact.yaml  h2_excited_mini.yaml  h2_external_point_charges.yaml  h2_hardware_precision_push.yaml  h2_hardware_ready.yaml  h2_multitask.yaml  h2_noisy.yaml  h2_property_validation.yaml  h2_runtime_hardware_probe.yaml  h2_runtime_hardware_probe_ca.yaml  h2_runtime_hardware_probe_ca_layout.yaml  h2_runtime_hardware_probe_puccd.yaml  h2_runtime_hardware_probe_puccd_layout.yaml  h2_runtime_hardware_probe_puccd_layout_highshots.yaml  h2_runtime_hardware_probe_puccd_layout_mitigated.yaml  h2_runtime_micro_probe_v2.yaml  h2_shot.yaml  h2_symmetry_tapered.yaml  h2o_active_space.yaml  lih.yaml  lih_active_exact_compressed_cholesky.yaml  lih_active_exact_compressed_double_factorization.yaml  lih_active_exact_uncompressed.yaml  lih_active_runtime_hardware_probe.yaml  lih_active_runtime_hardware_probe_v2.yaml  lih_active_shot_runtime_ready_compressed.yaml  lih_active_space_auto.yaml  lih_active_space_trusted_score.yaml  lih_active_vqe.yaml  lih_active_vqe_statevector.yaml  lih_active_vqe_statevector_compressed.yaml  (+8 more)
docs/: agent_interface.md  ai_workspace.md  architecture.md  benchmark_suite.md  branding.md  claim_compiler.md  custom_workflows.md  developer_guide.md  environment_embedding.md  evidence_capsule.md  external_point_charges.md  handoff.md  hardware_runtime_campaign_report.md  promotion_gate.md  release_audit.md  release_showcase.md  research_objectives.md  roadmap.md  study_registry.md  task_model.md  tc_qsci.md  user_manual.md  verified_scope.md  workbench.md
examples/: README.md  h2_from_xyz.yaml  tc_qsci_h2_summary.json
examples/workflow_plugins/qcchem_workflow_echo_plugin/: pyproject.toml
examples/workflow_plugins/qcchem_workflow_echo_plugin/src/qcchem_workflow_echo_plugin/: __init__.py
qcchem/: __init__.py  (+1 more)
(+1038 files in other folders)
