[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QCchem"
version = "0.1.0a1"
description = "Research-grade quantum chemistry workflow scaffold built on Qiskit and Qiskit Nature."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "QCchem Contributors" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "qiskit>=2.3.0",
  "qiskit-aer>=0.17.2",
  "qiskit-algorithms>=0.4.0",
  "qiskit-nature>=0.7.0",
  "pyscf>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ai = [
  "openai>=1.76.0",
]
runtime = [
  "qiskit-ibm-runtime>=0.46.0",
]
cudaq = [
  "cudaq>=0.14.2; python_version >= '3.11'",
]
ui = [
  "dash>=2.18",
  "plotly>=5.24",
  "pandas>=2.2",
]

[project.scripts]
qcchem = "qcchem.cli.main:main"
qcchem-workbench = "qcchem.workbench.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["qcchem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not slow"]
markers = [
  "integration: integration tests requiring the quantum chemistry stack",
  "slow: exploratory stress tests that are validated outside the default CI gate",
]
filterwarnings = [
  "ignore:The class ``qiskit\\..*`` is deprecated.*:DeprecationWarning",
  "ignore:The property ``qiskit\\.dagcircuit\\.dagcircuit\\.DAGCircuit\\.duration`` is deprecated.*:DeprecationWarning",
  "ignore:The property ``qiskit\\.dagcircuit\\.dagcircuit\\.DAGCircuit\\.unit`` is deprecated.*:DeprecationWarning",
  "ignore:The property ``qiskit\\.circuit\\.instruction\\.Instruction\\.condition`` is deprecated.*:DeprecationWarning",
  "ignore:qiskit\\.providers\\.models is deprecated.*:DeprecationWarning",
  "ignore:The class ``qiskit\\.circuit\\.library\\.n_local\\.n_local\\.NLocal`` is pending deprecation.*:PendingDeprecationWarning",
]
